src/test/resources/purescript_examples/failing/ExportExplicit.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownExport\n-- should fail as z does not exist in the module\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('M1')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSValueRefImpl(ValueRef)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('x')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSValueRefImpl(ValueRef)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('y')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSValueRefImpl(ValueRef)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('z')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('x')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(natural)('1')
              PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('y')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(natural)('2')
              PsiElement(whitespace)('\n')
